# RustyRook

./: Cargo.toml  README.md  openings.txt
src/: main.rs
src/board/: bitboard.rs  board.rs  castle.rs  fen.rs  mod.rs  promotion.rs
src/engine/: checked.rs  count.rs  engine.rs  mod.rs  moves.rs  ray.rs  sender.rs
src/engine/transposition/: mod.rs  table.rs  transposition.rs  zobrist.rs
src/evaluation/: mod.rs
src/figures/: Bishop.rs  BishopAndRookMoves.rs  bishop_and_rook_moves.rs  blablabla.rs  color.rs  figures.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece.rs  position.rs  queen.rs  rock.rs  rook.rs  sliding_moves.rs
src/helper/: mod.rs  movement.rs  moves_by_field.rs  opening.rs  position_to_usize.rs
src/helper/magic_bitboards/: find.rs  helper.rs  init_with_predefined.rs  magic_bitboard.rs  mod.rs
