[package]
name = "RustyRook"
version = "1.0.0"
edition = "2021"

[dependencies]
bitmaps = "3.2.1"
dashmap = "6.1.0"
lazy_static = "1.5.0"
log = "0.4.26"
once_cell = "1.21.3"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.1.1"
simple_file_logger = "0.4.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
